server/compilers/goLiteJS/src/test/ml2/valid/typeop1.go
package main


func main() {
	// var a = 1*1
	// var v = 1+1
	// var c = 1-1
	// var d = 1/1
	// var e = 1%1
	// var s []int
	type as bool
	type ds bool
	var sasd ds
	var dasda ds
	sasd = sasd&&dasda
	var as = 1221+1222


}
