server/compilers/goLiteJS/src/test/ml2/invalid/decl1.go
// variable used in statement before declared
package main

func main() {
    a++
    var a int
}
